rental-comp ngModule creation. router testing based on navigation url path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-   <bwm-header></bwm-header>
+<!--Header component-->
+<bwm-header></bwm-header>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
-<h2>{{componenetVariable}} - Test</h2>
-<p></p>
-<h2>Event handling Test</h2>
-<button (click)="clickHandler()">Button Test</button>
-
+<!-- rental Listing Section-->
+<!--bwm-rental></bwm-rental !-->
